Fixed #1382 - Matrix (multiple choice): Editors go beyond question borders if type is Boolean or Rating - we decided to with Mike A to show scrollbar

--- a/packages/survey-creator-core/src/components/question.scss
+++ b/packages/survey-creator-core/src/components/question.scss
@@ -37,6 +37,7 @@ svc-question {
   border: 1px dashed $border;
   width: 100%;
   height: calcSize(23);
+  box-sizing: border-box;
 }
 
 .svc-panel__placeholder {
