--- a/packages/survey-creator-core/src/survey-designer-theme/blocks/sd-question.scss
+++ b/packages/survey-creator-core/src/survey-designer-theme/blocks/sd-question.scss
@@ -11,3 +11,8 @@
   line-height: calcSize(3);
   margin: 4px 0px;
 }
+
+.sd-question__content {
+  overflow-x: auto;
+  padding: calcSize(2) 0;
+}
